@@ -1,0 +1,4 @@
+from allauth.socialaccount.providers.oauth.urls import default_urlpatterns
+from .provider import BitbucketProvider
+
+urlpatterns = default_urlpatterns(BitbucketProvider)
