@@ -1,3 +1,7 @@
+2014-02-04  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Added Bitbucket provider.
+
 2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* "excessivedemon" contributed Flickr support, thanks!
